# py-weather

./: .env.gpg  .gitignore  .gpgrc  .pre-commit-config.yaml  README.md  config.py  exceptions.py  main.py  pyproject.toml  requirements.txt  utils.py
modules/: coordinates.py  gps_coordinates.py  weather_api_service.py  weather_formatter.py
name_tuples/: nt_coordinates.py  nt_weather.py
